@@ -887,9 +887,11 @@ Abbrevs marked as \"system abbrevs\" are omitted."
 	    (insert "\n\n"))
 	(insert "(define-abbrev-table '")
 	(prin1 name)
-	(insert " '(")
-	(mapc 'abbrev--write symbols)
-	(insert "    ))\n\n"))
+	(if (null symbols)
+	    (insert " '())\n\n")
+	  (insert "\n  '(\n")
+	  (mapc 'abbrev--write symbols)
+	  (insert "   ))\n\n")))
       nil)))
 
 (put 'define-abbrev-table 'doc-string-elt 3)
