@@ -1,3 +1,8 @@
+2009-08-04  Chong Yidong  <cyd@stupidchicken.com>
+
+	* abbrev.el (insert-abbrev-table-description): Prettify output.
+	Suggested by Karl Chen.
+
 2009-08-04  Dmitry Dzhus  <dima@sphinx.net.ru>
 
 	* progmodes/gdb-mi.el (gdb-frame-number): Initialize with nil.
